@@ -394,10 +394,7 @@ def test_expression_cbers_rgb(cbers_tile):
 
 
 def test_expression_main_ratio():
-    """
-    Should work as expected
-    """
-
+    """Should work as expected."""
     expr = "(b3 - b2) / (b3 + b2)"
     tile_z = 19
     tile_x = 109554
@@ -408,6 +405,10 @@ def test_expression_main_ratio():
         prefix
     )
     data, mask = utils.expression(sceneid, tile_x, tile_y, tile_z, expr)
+    data.shape == (1, 256, 256)
+    mask.shape == (256, 256)
+
+    data, mask = utils.expression(sceneid, tile_x, tile_y, tile_z, expr=expr)
     data.shape == (1, 256, 256)
     mask.shape == (256, 256)
 
@@ -448,6 +449,19 @@ def test_expression_main_kwargs():
     data, mask = utils.expression(sceneid, tile_x, tile_y, tile_z, expr, tilesize=512)
     data.shape == (1, 512, 512)
     mask.shape == (512, 512)
+
+
+def test_expression_missing():
+    """Should raise an exception on missing expression"""
+    tile_z = 19
+    tile_x = 109554
+    tile_y = 200458
+    prefix = os.path.join(os.path.dirname(__file__), "fixtures")
+    sceneid = "{}/my-bucket/hro_sources/colorado/201404_13SED190110_201404_0x1500m_CL_1.tif".format(
+        prefix
+    )
+    with pytest.raises(Exception):
+        utils.expression(sceneid, tile_x, tile_y, tile_z, tilesize=512)
 
 
 def test_get_vrt_transform_valid():
